state, components, and styling added

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,4 +5,11 @@ h1 {
   color: pink;
 }
 
+.App {
+  width: 100vw;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
 @import "global";
