--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,10 @@ h1 {
   min-height: 100vh;
   display: grid;
   place-items: center;
+  h1 {
+    min-height: 10vh;
+  }
 }
 
 @import "global";
+@import "products";
