--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -1,45 +1,41 @@
 .products-container {
   width: 80%;
-  margin: 0 auto;
+  margin: 10rem auto 0;
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-auto-rows: minxmax(350px, 500px);
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-auto-rows: minmax(400px, 500px);
 }
 
 .product-card {
-  outline: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   position: relative;
-  padding: 10px;
-  border-radius: 1.25px;
+  @include flex(column, flex-start, center);
+  h2 {
+    padding: 1rem;
+  }
   img {
     width: 100%;
-    height: 80%;
+    height: 70%;
     object-fit: cover;
   }
-  .product-category {
+  .category {
     position: absolute;
     top: 5%;
     right: 5%;
-    font-size: 2rem;
-    background: pink;
-    color: white;
-    padding: 0.5rem;
+    background: $main-color;
+    color: $white;
+    padding: 1rem;
   }
 }
 
 .btn {
   padding: 10px 20px;
-  background: pink;
-  color: white;
-  border: 2px solid pink;
+  background: $main-color;
+  border: 2px solid $main-color;
+  color: $white;
   transition: all 0.3s ease;
   &:hover {
-    color: pink;
-    background: white;
+    background: $white;
+    color: $main-color;
   }
 }
